cppcheck/cppcheck_code_output.txt
Checking widgetci/main.cpp ...
1/6 files checked 7% done
Checking widgetci/mainwindow.cpp ...
2/6 files checked 43% done
Checking widgetci/runguard.cpp ...
3/6 files checked 48% done
Checking widgetci/wqmlfile.cpp ...
4/6 files checked 56% done
Checking widgetci/wqmlsystem.cpp ...
widgetci/wqmlsystem.cpp:78:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:92:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:138:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:187:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:192:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:197:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:214:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:219:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:224:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:241:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:246:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:251:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:268:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:273:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:278:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:298:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:303:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:323:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:328:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:333:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:353:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:358:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:363:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
widgetci/wqmlsystem.cpp:400:1: error: Found a exit path from function with non-void return type that has missing return statement [missingReturn]
}
^
Checking widgetci/wqmlsystem.cpp: Q_OS_LINUX...
Checking widgetci/wqmlsystem.cpp: Q_OS_WIN...
5/6 files checked 81% done
Checking widgetci/wwidget.cpp ...
6/6 files checked 100% done